[project]
name = "Real Time HashTag Clustering"
version = "0.0.1"
requires-python = ">=3.10"

maintainers = [
	{ name = "Mohamed Arish T P", email = "arish1248@gmail.com" },
	{ name = "", email = "" }, # Midlaj fill this line and remove comment
	{ name = "Minhaj k k", email = "minhaj19mr2001@gmail.com" },
	{ name = "Nimisha Nakshatra PJ", email = "nimisha1942001@gmail.com" }, 
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
