[project]
name = "Real Time HashTag Clustering"
version = "0.0.1"
requires-python = ">=3.10"

maintainers = [
	{ name = "Mohamed Arish T P", email = "arish1248@gmail.com" },
	{ name = "Midlaj M K", email = "midlaj45mk@gmail.com" }, 
	{ name = "Minhaj k k", email = "minhaj19mr2001@gmail.com" },
	{ name = "Nimisha Nakshatra PJ", email = "nimisha1942001@gmail.com" }, 
]

[tool.black]
line-length = 79
exclude = ".venv/"

[tool.isort]
profile = "black"
